Fixed menu.scss due to overflowing of menus

--- a/app/static/css/menu.scss
+++ b/app/static/css/menu.scss
@@ -5,6 +5,8 @@ $sbBorderColor: #AAA;
 #main-header {
     padding: $padding;
     background: color(primaryLightColor);
+    display: flex;
+    align-content: space-between;
 
     *,
     *:before,
@@ -13,7 +15,8 @@ $sbBorderColor: #AAA;
     }
 
     div.logo {
-        display: inline;
+        display: inline-block;
+        flex: 1;
 
         img {
             height: 2rem;
@@ -28,9 +31,6 @@ $sbBorderColor: #AAA;
     }
 
     div.nav-wrap {
-        float: right;
-        display: block;
-        height: auto;
 
         .sr-only {
             position: absolute;
@@ -156,18 +156,12 @@ $sbBorderColor: #AAA;
                 position: fixed;
             }
         }
+    }
 
-        @media (min-width: $break-small) {
-            display: flex;
+    @media (min-width: $break-small) {
+        div.logo {}
 
-            div.logo {
-                flex: 1;
-            }
-
-            nav.main-menu {
-                overflow: hidden;
-                height: 100%;
-            }
+        div.nav-wrap {
 
             .menu-toggle,
             .main-menu .menu-close {
@@ -175,7 +169,7 @@ $sbBorderColor: #AAA;
             }
 
             .main-menu {
-                position: relative;
+                position: inherit;
                 left: auto;
                 top: auto;
                 height: auto;
